--- a/vignettes/Digital_Soil_Mapping_report.Rmd
+++ b/vignettes/Digital_Soil_Mapping_report.Rmd
@@ -1,11 +1,13 @@
 ---
 title: "Digital Soil Mapping"
+subtitle: "Applied Geodata Science II, fall semester 2023"
 author: 'Noémie Wellinger'
 date: "`r Sys.Date()`"
 output: 
   html_document: 
     toc: yes
     fig_caption: yes
+    code_folding: "hide"
 ---
 
 ```{r libs, include = F}
@@ -52,7 +54,7 @@ vi_rf_basic |>
 # 2. Variable selection
 As explained in the tutorial, the Boruta algorithm is used to perform a variable selection based on the variable importance (Kursa & Rudnicki, 2010).
 
-```{r boruta, echo = F, fig.cap = "Figure 2: Variable importance based on Boruta."}
+```{r boruta, class.source = "fold-hide", fig.cap = "Figure 2: Variable importance based on Boruta."}
 # load the Boruta object
 bor <- readRDS(here::here("data/boruta_waterlog100.rds"))
   
@@ -149,7 +151,7 @@ print(paste("This is a Balance Ratio of: ", round(balance_ratio, digits = 2)))
 A balance ratio close to 1 would indicate balanced data. In our case, there are more FALSE values. When interpreting the metrics, we have to be aware of that. Accuracy is not the best metric for imbalanced data: always predicting FALSE would lead to a higher accuracy than always predicting TRUE. Therefore, other, more robust metrics such as Kappa, F1 Score and the True Positive Rate (Sensitivity) should be considered.
 
 
-```{r predictions, include = F, echo = F}
+```{r predictions, class.source = "fold-hide"}
 # Load random forest model
 rf_bor   <- readRDS(here::here("data/rf_bor_waterlog100.rds"))
 rf_opt   <- readRDS(here::here("data/rf_opt_waterlog100.rds"))
@@ -259,7 +261,7 @@ I therefore chose to use this model, for the last step of the analysis.
 A new, probabilistic model was trained using the default hyperparameters, and the reduced predictor set according to the Boruta selection.
 Then, the model is first tested and evaluated on the validation sites (Fig. 8).
 The Receiver Operating Characteristic (ROC) curve evaluates the performance of a binary classification model (Fig. 9). The AUC (area under the curve) is 0.809, meaning the model is markedly better than a random model (AUC = 0.5), and not quite as good as a perfect model (AUC = 1).
-```{r prob_plot, echo = F, message = F, fig.cap = "Figure 8: Predicted probability vs. Observed soil waterlog at 100 cm.", fig.height=2.5}
+```{r prob_plot, class.source = "fold-hide", fig.cap = "Figure 8: Predicted probability vs. Observed soil waterlog at 100 cm.", fig.height=2.5}
 rf_prob <- readRDS(here::here("data/rf_prob_waterlog100.rds"))
 prediction_prob <- predict(
   rf_prob,           # RF model
@@ -278,15 +280,12 @@ df_test |>
   ggplot2::theme_classic() +
   ggplot2::labs(
     title = "Predicted probability vs. Observed soil waterlog at 100 cm",
-    # subtitle = bquote(paste("Bias = ", .(bias), 
-    #                         ", RMSE = ", .(rmse), 
-    #                         ", R"^2, " = ", .(r2))),
     x = "Predicted probability",
     y = "Observed waterlog"
   )
 ```
 
-```{r roc, echo = F, fig.cap = "Figure 9: ROC curve for soil waterlog at 100 cm."}
+```{r roc, class.source = "fold-hide", fig.cap = "Figure 9: ROC curve for soil waterlog at 100 cm."}
 # Create the ROC curve
 roc_obj <- roc(df_test$waterlog.100, df_test$pred_prob)
 # Plot the ROC curve
@@ -295,7 +294,8 @@ grid.col=c("darkgrey", "lightgrey"), max.auc.polygon=TRUE,
 auc.polygon.col="#ccffaa", print.thres=F, main = "ROC curve for soil waterlog at 100 cm")
 ```
 
-Let's map the predicted probability:
+Let's map the predicted probability.
+The code used to generated the raster files containing the predictions can be found at `analysis/Soil_rasters.R`.
 ```{r map_raster_prob, echo = F, message = F, fig.cap = "Figure 10: Map of predicted probability of soil waterlogging at 100 cm.", fig.height=2.8}
 raster_pred_prob <- terra::rast(here::here("data/predicted_waterlog100_prob.tif"))
 
